--- a/include/libft/Makefile
+++ b/include/libft/Makefile
@@ -6,14 +6,14 @@
 #    By: avieira- <avieira-@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/04/21 12:18:39 by avieira-          #+#    #+#              #
-#    Updated: 2025/06/12 12:05:55 by avieira-         ###   ########.fr        #
+#    Updated: 2025/06/12 17:08:35 by avieira-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CFLAGS = -Wall -Wextra -Werror
 NAME = libft.a
 SRCS = srcs/ft_atoi.c srcs/ft_bzero.c srcs/ft_isalnum.c srcs/ft_isalpha.c
-SRCS += srcs/ft_isascii.c srcs/ft_isdigit.c
+SRCS += srcs/ft_isascii.c srcs/ft_isdigit.c srcs/ft_isspace.c
 SRCS += srcs/ft_isprint.c srcs/ft_memcpy.c srcs/ft_memset.c srcs/ft_strlen.c
 SRCS += srcs/ft_tolower.c srcs/ft_memmove.c srcs/ft_strnstr.c srcs/ft_strchr.c
 SRCS += srcs/ft_strrchr.c srcs/ft_strtrim.c srcs/ft_split.c srcs/ft_putendl_fd.c
